[package]
name = "dedup"
version = "0.1.0"
authors = ["michalj <michal.jurczynski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = "0.2.0-alpha.6"
#tokio-fs = "0.2.0-alpha.6"
#md5 = "0.6.1"
futures = "0.3"
async-std = "1"
